# Chii

./: .gitignore  README.md  chii.service  main.py  pyproject.toml  requirements.txt
chii/: Emojis.py  __main__.py
chii/body/: CogSkeleton.py  DiscordLimb.py  HookLimb.py  LoggerLimb.py  MiscLimb.py
chii/misc/: ChiiBlahBlah.py  ChiiFarmCog.py  ChiiFidelFucker.py  ChiiPresenceCog.py  ChiiRepeat.py  ChiiScream.py  ChiiShh.py  ChiiTFTCog.py  ChiiValCog.py  ChiiWordleCog.py  ChiiZzz.py
chii/ml_cogs/: ChiiDalle.py  ChiiUpscale.py
src/: ChiiBlahBlah.py  ChiiFarmCog.py  ChiiFidelFucker.py  ChiiPog.py  ChiiPresenceCog.py  ChiiRepeat.py  ChiiScream.py  ChiiShh.py  ChiiTFTCog.py  ChiiUpscale.py  ChiiValCog.py  ChiiValGif.py  ChiiWordleBot.py  ChiiWordleCog.py  ChiiZzz.py  CogSkeleton.py  __init__.py  load_token.py  utils.py
src/body/: CogSkeleton.py  DiscordLimb.py  HookLimb.py  LoggerLimb.py  MiscLimb.py
