[project]
name = "Chii"
version = "0.1.0"
description = "The stupidest hyperintelligent discord bot you've ever seen."
authors = [
    {name = "Haydn Jones", email = "haydnjonest@gmail.com"},
]
dependencies = [
    "ort-nightly-gpu==1.12.0.dev20220715004",
    "pandas>=1.4.3",
    "numpy>=1.23.1",
    "imageio>=2.19.3",
    "glicko2>=2.0.0",
    "requests>=2.28.1",
    "py-cord>=2.0.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "torchaudio>=0.12.0",
    "tabulate>=0.8.10",
    "pynacl>=1.5.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
allow_prereleases = true

[[tool.pdm.source]]
url = "https://test.pypi.org/simple"
verify_ssl = true